<resources>
    <string name="app_name">Service Demo</string>
    <string name="service">Service</string>
    <string name="bind_service">Bind Service</string>
    <string name="intent_service">Intent Service</string>
    <string name="foreground_service">Foreground Service</string>
    <string name="job_service">Job Service</string>
    <string name="job_intent_service">Job Intent Service</string>
    <string name="remote_bind_service">Remote Bind Service</string>
</resources>
